--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
             "Holaaaaa!!!.",
             "Este es mi regalo para ti.",
             "Se que en ocasiones, olvido las cosas, pero JAMASSSS!!, jamas te atrevas a pensar, que yo me olvido de ti",
-            "Se que con anasias querias tus flores amarillas, y creeme que ne verdad quisiera haber sido yo el que te las dió",
+            "Se que con anasias querias tus flores amarillas, y creeme que de verdad quisiera haber sido yo el que te las dió",
+            "Pero yo no soy como cualquier New Yorkino mentiroso basico pendejo, si yo hago algo para ti, lo hago bien y como nadie",
             "Creeme, se que las mereces y es por eso que esta lluvia de floresitas amarillas, es solo para tí, una lluvia de floresitas amarillas tan especial, como lo eres tú ❤️.",
             "Por que en un dia cualquiera, cualquiera (Cualquier New Yorkino mentiroso) podria ir a una floristeria y pedir las flores mas cuidadas que tengan y no por eso dejarian de ser un regalo especial pero ...",
             "Dedicar mi tiempo, mis conocimientos y mi creatividad, mi sueño, para hacer algo unico para tí, es mi forma de decirte que es un regalo muy mio y sin menospreciar el noble de acto de dar flores, es la forma mas unica en las que quiero dartelas ❤️.",
