--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             opacity: 1; 
         }
     </style>
-    <title>Lluvia de Girasoles</title>
+    <title>Gabi❤️ </title>
 </head>
 <body>
     <div class="modal" id="messageModal">
